--- a/src/client/views/index.ejs
+++ b/src/client/views/index.ejs
@@ -6,6 +6,7 @@
     <title>Mercado Libre</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app"><%- markup -%></div>
+    <script src="js/app.js"></script>
 </body>
 </html>
